Fix canvas sizing issue
The page was showing a scrollbar and inspect element showed the canvas
element was a few pixels smaller than body. For whatever reason setting
canvas to display: block fixes this.

--- a/ui/sass/main.sass
+++ b/ui/sass/main.sass
@@ -2,3 +2,6 @@ body
 	font-size: 18px
 	color: #333
 	margin: 0
+
+canvas
+	display: block
